<resources>
    <string name="app_name">MobileApp</string>
    <string name="main_activity">Main Activity</string>
    <string name="enter_a_text">Enter a text</string>
    <string name="send">Send</string>
    <string name="alert">Alert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page">Login</string>
    <string name="email">Email:</string>
    <string name="enter_your_email">Enter Email</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
</resources>